--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 theme: minima
-title: Test portfolio
+title: Portfolio
 author: Alexa Pike
 description: 
-  This is a test portfolio and I have no idea what I am doing yet.
+  Welcome to my data science portfolio. 
+  Here I will upload all of my data science 
+  projects that display my coding experience.
